# vit

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  package-lock.json  pyproject.toml  test.py
.agents/skills/vit-component-benchmark/: SKILL.md
.circleci/: config.yml
benchmark/: README.md  __init__.py  benchmark.py  checkpoint_memory.py  cli.py  component_benchmark.py  component_cli.py  example_config.yaml  plotting.py  quantize.py
benchmark_results/components/norm-layer-forward-cuda2/: comparison_vs_norm-rms-forward-cuda2.json  component_benchmark_results.csv  component_benchmark_results.json
benchmark_results/components/norm-rms-forward-cuda2/: component_benchmark_results.csv  component_benchmark_results.json
benchmark_results/components/swiglu-mlp-768-3072-bf16/: component_benchmark_results.csv  component_benchmark_results.json
docker/: Dockerfile.rust-ffi  Dockerfile.rust-ffi-rocm
rust/: Cargo.toml  README.md
rust/bridge/: CMakeLists.txt
rust/bridge/include/: vit_bridge.h
rust/bridge/src/: vit_bridge.cpp
rust/vit-cli/: Cargo.toml  build.rs
rust/vit-cli/src/: main.rs
rust/vit-cli/src/commands/: infer.rs  mod.rs  summarize.rs  validate.rs
rust/vit-core/: Cargo.toml
rust/vit-core/src/: config.rs  error.rs  lib.rs
rust/vit-ffi/: Cargo.toml  build.rs
rust/vit-ffi/src/: lib.rs
rust/vit-ffi/tests/: integration.rs
scripts/: download_libtorch.sh  export_aot.py  train_polar_approx.py  validate_equivalence.py  visualize_lff.py
tests/: conftest.py  test_aot_inference.py  test_attention.py  test_benchmark.py  test_checkpointing.py  test_component_benchmark.py  test_drop_path.py  test_fused.py  test_head.py  test_matryoshka.py  test_moe.py  test_norm.py  test_patch_embed.py  test_pos_enc.py  test_rope.py  test_softmoe.py  test_tokens.py  test_transformer.py  test_version.py  test_vit.py
tests/test_te/: test_patch_embed_te.py  test_pos_enc_te.py  test_transformer_te.py  test_vit_te.py
vit/: __init__.py  _version.py  attention.py  benchmark.py  drop_path.py  fused.py  head.py  helpers.py  initialization.py  layer_scale.py  matryoshka.py  moe.py  norm.py  patch_embed.py  pos_enc.py  rope.py  soft_moe.py  tokens.py  transformer.py  vit.py
vit/te/: __init__.py  patch_embed.py  pos_enc.py  vit.py
