[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "vit"
description = ""
requires-python = ">=3.11,<3.15"
authors = [
    {name = "Scott Chase Waggener", email = "chase.waggener@icloud.com"},
]
dependencies = [
  "torch",
  "numpy",
  "pyyaml",
  "torchao",
]

readme = "README.md"
license = {text = "Apache"}
dynamic = ["version"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["_version.py"]

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "UP",     # pyupgrade
]
ignore = ["E501"]  # line too long (handled by formatter)

[tool.ruff.lint.isort]
lines-after-imports = 2
force-single-line = false
combine-as-imports = true

[tool.basedpyright]
include = ["vit", "tests", "benchmark"]
exclude = [
  "**/node_modules",
  "**/__pycache__",
  "**/.pytest_cache",
  "**/_version.py",
]
pythonVersion = "3.14"
pythonPlatform = "Linux"
typeCheckingMode = "standard"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "vit/_version.py"

[tool.pytest.ini_options]
markers = [
  "ci_skip",
  "cuda",
]
filterwarnings = []

[project.scripts]
vit-benchmark = "benchmark.cli:main"

[dependency-groups]
benchmarking = [
    "matplotlib",
    "tqdm",
]

dev = [
    "ruff",
    "basedpyright",
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "pytest-env",
    "coverage",
    "pdbpp",
    {include-group = "benchmarking"},
]
