[workspace]
resolver = "2"
members = [
    "vit-core",
    "vit-ffi",
    "vit-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Scott Chase Waggener <chase.waggener@icloud.com>"]
license = "Apache-2.0"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Workspace crates
vit-core = { path = "vit-core" }
vit-ffi = { path = "vit-ffi" }
